# tk-tools-tauri

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yaml  release.yaml.bak
src/: App.vue  main.ts  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: main.scss
src/components/: Card.vue  CharactersSettingDialog.vue  Editor.vue  Footer.vue  Menu.vue
src/router/: index.ts
src/store/: AppConfigStore.ts  useDataStore.ts  useSettingsStore.ts
src/views/: Base64Decrypt.vue  Base64Encrypt.vue  Base64Tool.vue  Config.vue  DateCalculator.vue  DateTool.vue  EncryptTool.vue  GenerateCharacter.vue  GenerateUUID.vue  GeneratorTool.vue  HashCalc.vue  HashCompare.vue  HashTool.vue  Home.vue  JsonTool.vue  TextDiff.vue  Timestamp.vue  Update.vue
src/views/config/: About.vue  Appearance.vue  System.vue
